@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.7
 
+	- Fl_JPEG_Image did not correctly handle errors reported
+	  by the JPEG library (STR #652)
 	- Fl_Menu now draws sub-menu arrows like other toolkits
 	  and FLTK 2.0 (STR #651)
 	- Fixed a compiler warning in Fl_Window.H (STR #641)
